--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,9 @@
 
   <title>mesh</title>
   <link rel="manifest" href="manifest.json">
+  
+  
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -37,7 +40,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #30aa49;
+      background-color: #000000;
           background-size: 100% 100%;
     }
 
@@ -89,7 +92,7 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-        background-color: #30aa49;
+        background-color: #000000;
           }
     }
   </style>
@@ -100,9 +103,13 @@
       document.body.style.background = "transparent";
     }
   </script>
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 </head>
 <body>
+  <picture id="splash">
+      <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
+      <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
+      <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
+  </picture>
   <script src="flutter_bootstrap.js" async=""></script>
 
 
